--- a/.github/workflows/action-readme.yml
+++ b/.github/workflows/action-readme.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@dev
 
-      - uses: muesli/readme-scribe@master
+      - uses: adisus2-plasma/adisus2-plasma@dev
         env:
           GITHUB_TOKEN: ${{ secrets.USER_TOKEN }}
         with:
@@ -25,6 +25,6 @@ jobs:
         with:
           commit_message: Update generated README
           branch: dev
-          commit_user_name: readme-scribe
+          commit_user_name: adisus2-plasma
           commit_user_email: actions@github.com
-          commit_author: readme-scribe <actions@github.com>
+          commit_author: adisus2-plasma <actions@github.com>
