--- a/.github/workflows/action-readme.yml
+++ b/.github/workflows/action-readme.yml
@@ -1,30 +1,17 @@
-name: Update README
-
-on:
-  push:
-  schedule:
-    - cron: "0 */1 * * *"
-
+name: GitHub Actions Demo
+on: [push]
 jobs:
-  markscribe:
+  Explore-GitHub-Actions:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@dev
-
-      - uses: adisus2-plasma/adisus2-plasma@dev
-        env:
-          GITHUB_TOKEN: ${{ secrets.USER_TOKEN }}
-        with:
-          template: "templates/README.md.tpl"
-          writeTo: "README.md"
-
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        env:
-          GITHUB_TOKEN: ${{ secrets.USER_TOKEN }}
-        with:
-          commit_message: Update generated README
-          branch: dev
-          commit_user_name: adisus2-plasma
-          commit_user_email: actions@github.com
-          commit_author: adisus2-plasma <actions@github.com>
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - run: echo "🍏 This job's status is ${{ job.status }}."
